<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InfraredGun</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hiting">Hiting</string>
    <string name="hitMode">打靶模式</string>
    <string name="start">开始</string>
    <string name="stop">暂停</string>
    <string name="end">结束</string>
    <string name="strcontinue">继续</string>
    <string name="strreturn">返回</string>
    <string name="confirm">确定</string>
    <string name="hello">hello</string>
    <string name="mode1">模式1</string>
    <string name="mode2">模式2</string>
    <string name="mode3">模式3</string>
    <string name="common_mode">一般难度</string>
    <string name="progress_mode">精英难度</string>
    <string name="challenge_mode">神人难度</string>
    <string name="try_again">请再按一次键退出</string>
    <string name="cal_time">倒计时</string>
    <string name="second">秒</string>
    <string name="hit"> 击中</string>
    <string name="target">靶</string>
    <string name="gameset">游戏设置</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_hit_">Hit_Activity</string>
    <string name="title_activity_hit_set_">HitSet_Activity</string>
    <string name="title_activity_compete">ComPete_Activity</string>

    <string-array name="ModeTime">
        <item>5s</item>
        <item>10s</item>
        <item>15s</item>
        <item>20s</item>
        <item>25s</item>
        <item>30s</item>
    </string-array>
    <string-array name="CompeteTime">
        <item>60s</item>
        <item>120s</item>
        <item>180s</item>
        <item>240s</item>
        <item>300s</item>
        <item>360s</item>
    </string-array>

    <string name ="hitBrief">
        <p>模式简介\n\n</p>
        <p>\t\t起倒靶按客户端配置时间间隔自动起倒，被击中则提前倒下并加分。</p>
    </string>
    <string name ="competeBrief">
        <p>模式简介\n\n</p>
        <p>\t\t起倒靶按照客户端随机命令立起,根据难度设置确定立起持续时间。</p>
    </string>
    <string name="exerciseBrief">
        <p>模式简介\n\n</p>
        <p>\t\t起倒靶每隔30秒起倒一次。30秒之内被击中会倒下并再次立起，自动起倒时间刷新。\n</p>
    </string>
    <string name="title_activity_exercise_">Exercise_Activity</string>
    <string name="title_activity_compete__mode_">Compete_Mode_Activity</string>
    <string name="title_activity_compete_set">CompeteSet</string>

</resources>
