<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/model_main"
>

    <TextView
        android:id="@+id/tv_compete_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="123dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/back" />

    <TextView
        android:id="@+id/tv_competemodename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_compete_return"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="90dp"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:text="@string/common_mode" />



    <TextView
        android:id="@+id/tv_compete_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="56dp"
        android:background="@drawable/model"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/tv_compete_return" />
    <TextView
        android:id="@+id/tvmode1time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="54dp"
        android:textSize="@android:dimen/app_icon_size"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignTop="@+id/tv_compete_start"
        android:layout_alignStart="@+id/tv_competemodename" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal_time"
        android:id="@+id/tv1"
        android:layout_alignTop="@+id/tvmode1time"
        android:layout_toEndOf="@+id/tvmode1time"
        android:textSize="@android:dimen/app_icon_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second"
        android:id="@+id/tv2"
        android:layout_alignBottom="@+id/tvmode1time"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/tv1"
        android:textSize="@android:dimen/app_icon_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hit"
        android:id="@+id/textView4"
        android:textSize="@android:dimen/app_icon_size"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/tv1"
        android:layout_marginBottom="79dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target"
        android:id="@+id/textView5"
        android:textSize="@android:dimen/app_icon_size"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignStart="@+id/tv2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12"
        android:id="@+id/tv_rest_time"
        android:layout_toEndOf="@+id/tv_competemodename"
        android:layout_marginStart="62dp"
        android:layout_alignTop="@+id/tv2"
        android:layout_alignBottom="@+id/tv2"
        android:textSize="@android:dimen/app_icon_size"
        android:textColor="#ffcaff2e" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12"
        android:id="@+id/tv_hit_num"
        android:textSize="@android:dimen/app_icon_size"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignStart="@+id/tv_rest_time"
        android:textColor="#ffd3ff2f" />


</RelativeLayout>

