<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/practice">

    <TextView
        android:id="@+id/tv_exercise_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="105dp"
        android:layout_marginTop="83dp"
        android:background="@drawable/back"

        android:layout_marginEnd="76dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tv_practice_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pressed"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/tv_exercise_return"
        android:layout_alignEnd="@+id/tv_exercise_return" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exerciseBrief"
        android:paddingTop="10dp"
        android:id="@+id/textView6"

        android:lineSpacingExtra="9dp"
        android:textColor="#ffffff"
        android:textSize="25sp"

        android:gravity="center_horizontal|left"
        android:textIsSelectable="false"

        android:layout_marginLeft="50dp"
        android:layout_toStartOf="@+id/tv_practice_start"
        android:layout_marginRight="150dp"
        android:background="@drawable/bgdexercise"
        android:padding="20dp"
        android:layout_alignBottom="@+id/tv_practiceend"
        android:layout_alignTop="@+id/tv_practice_start" />

    <TextView
        android:id="@+id/tv_practiceend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pressed"
        android:gravity="center"
        android:text="@string/end"
        android:textColor="@color/black"
        android:textSize="30sp"

        android:layout_alignEnd="@+id/tv_practice_start"
        android:layout_below="@id/tv_practice_start"/>

</RelativeLayout>
